--- a/index.html
+++ b/index.html
@@ -16,13 +16,8 @@
             <div class="col-lg-4">
                 <div>
                     <img src="images/logo.png" alt="">
-                    
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    </div>
-                   
             </div>
         </div>
-
         <div class="col-lg-6">
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search"    aria-label="Search "> 
@@ -45,7 +40,7 @@
                           <a class="nav-link active " href="#Subscribe">Subscribe</a>
                         </li>
                       </ul>
-                   </div>
+             </div>
            </div>
           </nav>
 
@@ -58,7 +53,7 @@
                             <h1>Cool Dude Headphone</h1>
                             <p>This is the best headphone in the world for people who just want to waste time in front of fake sports</p>
                             <h1>$420</h1>
-                            <button type="button" class="btn btn-warning">Warning</button>
+                            <button type="button" class="btn btn-warning">Buy Now <i class="fas fa-arrow-right"></i> </button>
                           </div>
                           <div class="col-lg-5">
                             <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -71,7 +66,7 @@
                             <h1>X-Box for your living room</h1>
                             <p>This is the best x-box in the world for people who just want to waste time in front</p>
                             <h1>$600</h1>
-                            <button type="button" class="btn btn-warning">Warning</button>
+                            <button type="button" class="btn btn-warning">Buy Now <i class="fas fa-arrow-right"></i></button>
                         </div>
                         <div class="col-lg-5">
                             <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -84,7 +79,7 @@
                         <h1>Mega LCD TV For Sports</h1>
                         <p>This is the best tv in the world for people who just want to waste time in front of tv</p>
                         <h1>$1200</h1>
-                        <button type="button" class="btn btn-warning">Warning</button>
+                        <button type="button" class="btn btn-warning"> Buy Now <i class="fas fa-arrow-right"></i> </button>
                       </div>
                       <div class="col-lg-5">
                         <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -140,7 +135,7 @@
                     <div class="ms-3 mb-3">
                         <h5>$120</h5>
                       <div class="btn btn-warning">
-                          Buy Now
+                          Buy Now <i class="fas fa-arrow-right"></i>
                       </div>
                     </div>
                   </div>
@@ -155,7 +150,7 @@
                     <div class="ms-3 mb-3">
                         <h5>$320</h5>
                         <div class="btn btn-warning">
-                            Buy Now
+                            Buy Now <i class="fas fa-arrow-right"></i>
                         </div>
                     </div>
                   </div>
@@ -170,7 +165,7 @@
                     <div class="ms-3 mb-3 ">
                         <h5>$350</h5>
                         <div class="btn btn-warning">
-                            Buy Now
+                            Buy Now <i class="fas fa-arrow-right"></i>
                         </div>
                     </div>
                   </div>
@@ -190,7 +185,7 @@
                     </div>
                     <div class="ms-3 mb-3">
                       <div class="btn btn-warning">
-                          Buy Now
+                          Buy Now <i class="fas fa-arrow-right"></i>
                       </div>
                     </div>
                   </div>
@@ -205,7 +200,7 @@
                     </div>
                     <div class="ms-3 mb-3">
                         <div class="btn btn-warning">
-                            Buy Now
+                            Buy Now <i class="fas fa-arrow-right"></i>
                         </div>
                     </div>
                   </div>
@@ -220,7 +215,7 @@
                     </div>
                     <div class="ms-3 mb-3">
                         <div class="btn btn-warning">
-                            Buy Now
+                            Buy Now <i class="fas fa-arrow-right"></i>
                         </div>
                     </div>
                   </div>
