--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Panda-E-Commerce</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/384082714d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
-        <nav class=" container   navbar navbar-expand-lg navbar-light bg-light">
+        <nav class=" container  navbar navbar-expand-lg navbar-light bg-light">
            <div class="row d-flex gx-5 align-items-center  justify-content-between">
             <div class="col-lg-4">
                 <div>
@@ -46,14 +46,14 @@
 
           <section class="container my-5 ">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner ">
+                <div class="carousel-inner slide-bordercss ">
                   <div class="carousel-item active ">
-                      <div class="row p-5 bg-info bg-gradient d-flex align-items-center ">
+                      <div class="row p-5 panda-bg-info bg-gradient d-flex align-items-center ">
                           <div class="col-lg-7">
                             <h1>Cool Dude Headphone</h1>
                             <p>This is the best headphone in the world for people who just want to waste time in front of fake sports</p>
                             <h1>$420</h1>
-                            <button type="button" class="btn btn-warning">Buy Now <i class="fas fa-arrow-right"></i> </button>
+                            <button type="button" class="panda-btn-background border-0">Buy Now <i class="fas fa-arrow-right"></i> </button>
                           </div>
                           <div class="col-lg-5">
                             <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -61,12 +61,12 @@
                       </div>
                   </div>
                   <div class="carousel-item">
-                    <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+                    <div class="row p-5 panda-bg-info bg-gradient d-flex align-items-center">
                         <div class="col-lg-7">
                             <h1>X-Box for your living room</h1>
                             <p>This is the best x-box in the world for people who just want to waste time in front</p>
                             <h1>$600</h1>
-                            <button type="button" class="btn btn-warning">Buy Now <i class="fas fa-arrow-right"></i></button>
+                            <button type="button" class="panda-btn-background border-0">Buy Now <i class="fas fa-arrow-right"></i></button>
                         </div>
                         <div class="col-lg-5">
                             <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -74,12 +74,12 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                  <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+                  <div class="row p-5 panda-bg-info bg-gradient d-flex align-items-center">
                       <div class="col-lg-7">
                         <h1>Mega LCD TV For Sports</h1>
                         <p>This is the best tv in the world for people who just want to waste time in front of tv</p>
                         <h1>$1200</h1>
-                        <button type="button" class="btn btn-warning"> Buy Now <i class="fas fa-arrow-right"></i> </button>
+                        <button type="button" class="panda-btn-background border-0"> Buy Now <i class="fas fa-arrow-right"></i> </button>
                       </div>
                       <div class="col-lg-5">
                         <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -99,7 +99,7 @@
           </section>
     </header>
      <main>
-         <section class="container my-5">
+         <section class="container my-5 categories">
             <div class="row g-3">
                 <div class="col-lg-4 col-md-6 col-12">
                   <div class="p-3 border bg-warning text-white d-flex align-items-center justify-content-between rounded-3">
@@ -108,18 +108,19 @@
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                  <div class="p-3 border bg-success text-white d-flex align-items-center justify-content-between rounded-3">
+                  <div class="p-3 border bg-bag-categories text-white d-flex align-items-center justify-content-between rounded-3">
                       <h1>Bag</h1>
                     <img src="images/categories/bag.png" alt="">
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                  <div class="p-3 border bg-primary text-white d-flex align-items-center justify-content-between rounded-3">
+                  <div class="p-3 border bg-shoes-categories text-white d-flex align-items-center justify-content-between rounded-3">
                       <h1>Shoes</h1>
                     <img src="images/categories/shoes.png" alt="">
                   </div>
                 </div>
               </div>
+              <h6><span class="d-flex justify-content-end pt-3 ">See all <span class="ps-1"><i class="fas fa-arrow-right"></i></span> </span></h6>
          </section>
 
          <section class="container" id="Shoes" >
@@ -134,7 +135,7 @@
                     </div>
                     <div class="ms-3 mb-3">
                         <h5>$120</h5>
-                      <div class="btn btn-warning">
+                      <div class="panda-btn-background">
                           Buy Now <i class="fas fa-arrow-right"></i>
                       </div>
                     </div>
@@ -149,7 +150,7 @@
                     </div>
                     <div class="ms-3 mb-3">
                         <h5>$320</h5>
-                        <div class="btn btn-warning">
+                        <div class="panda-btn-background">
                             Buy Now <i class="fas fa-arrow-right"></i>
                         </div>
                     </div>
@@ -164,7 +165,7 @@
                     </div>
                     <div class="ms-3 mb-3 ">
                         <h5>$350</h5>
-                        <div class="btn btn-warning">
+                        <div class="panda-btn-background">
                             Buy Now <i class="fas fa-arrow-right"></i>
                         </div>
                     </div>
@@ -184,7 +185,7 @@
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     </div>
                     <div class="ms-3 mb-3">
-                      <div class="btn btn-warning">
+                      <div class="panda-btn-background">
                           Buy Now <i class="fas fa-arrow-right"></i>
                       </div>
                     </div>
@@ -199,7 +200,7 @@
                       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                     </div>
                     <div class="ms-3 mb-3">
-                        <div class="btn btn-warning">
+                        <div class="panda-btn-background">
                             Buy Now <i class="fas fa-arrow-right"></i>
                         </div>
                     </div>
@@ -214,7 +215,7 @@
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                     </div>
                     <div class="ms-3 mb-3">
-                        <div class="btn btn-warning">
+                        <div class="panda-btn-background">
                             Buy Now <i class="fas fa-arrow-right"></i>
                         </div>
                     </div>
@@ -222,14 +223,13 @@
                 </div>
               </div>
          </section>
-         <section style="height:300px;" class="container bg-info bg-gradient d-flex justify-content-center align-items-center rounded-3" id="Subscribe" >
+         <section style="height:300px;" class="container panda-bg-info bg-gradient d-flex justify-content-center align-items-center rounded-3" id="Subscribe" >
           <div>
                 <h1>LET'S STAY IN TOUCH</h1>
                 <p>Get updates on sales, specials and more</p>
-                <input class="rounded-3 border-0" type="text" placeholder="Enter Your Email">
+                <input class="rounded-3 border-0 form-control" type="text" placeholder="Enter Your Email">
                 <br>
-                
-                <button class="bg-warning border-0 mt-2 rounded-3" type="submit">Submit</button>
+                <button class="panda-btn-background border-0 rounded-3" type="submit">Submit</button>
           </div>
          </section>
      </main>
