navbar fixed top

--- a/index.html
+++ b/index.html
@@ -11,40 +11,36 @@
 </head>
 <body>
     <header>
-        <nav class=" container  navbar navbar-expand-lg navbar-light bg-light">
-           <div class="row d-flex gx-5 align-items-center  justify-content-between">
-            <div class="col-lg-4">
+      <nav style="z-index: 1000;position:fixed;top: 0;" class="container-fluid navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid container">
                 <div>
                     <img src="images/logo.png" alt="">
             </div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="col-lg-2 ">
+              <ul class="navbar-nav  ms-5 mb-2 mb-lg-0 ">
+                  <li class="nav-item ">
+                    <a class="nav-link active " aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="#Shoes">Shoes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a  class="nav-link active" href="#Backpack">Backpack</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active " href="#Subscribe">Subscribe</a>
+                  </li>
+                </ul>
+       </div>
+            </ul>
+          </div>
         </div>
-        <div class="col-lg-6">
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search"    aria-label="Search "> 
-                <button class="btn btn-outline-success" type="submit">Search</button>
-              </form>
-        </div>
-    
-                   <div class="col-lg-2 ">
-                    <ul class="navbar-nav ms-5 mb-2 mb-lg-0 ">
-                        <li class="nav-item ">
-                          <a class="nav-link active " aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link active" href="#Shoes">Shoes</a>
-                        </li>
-                        <li class="nav-item">
-                          <a  class="nav-link active" href="#Backpack">Backpack</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link active " href="#Subscribe">Subscribe</a>
-                        </li>
-                      </ul>
-             </div>
-           </div>
-          </nav>
-
-          <section class="container my-5 ">
+      </nav>
+          <section style="padding-top: 112px;" class="container  ">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner slide-bordercss ">
                   <div class="carousel-item active ">
@@ -234,7 +230,7 @@
          </section>
      </main>
      <footer class="mt-5 text-center">
-         <p><small>©2020.Panda Commerce. All rights reserved.Sofia, Bulgaria.</small></p>
+         <p><small>©2022.Panda Commerce. All rights reserved.Mafujul Haque Plabon.</small></p>
      </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
